# regenx

./: .gitignore  README.md  escapes.py  gen.py  gen_pass.py  hatch.sh  pyproject.toml  runme.sh  tests.py
.github/workflows/: ci.yaml
src/regenx/: __about__.py  __init__.py  regenx.py
src/regex_gen/: __init__.py  main.py  regex_gen.py
tests/: test_module.py
